--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,6 +11,7 @@ body {
   margin: 0 auto;
 }
 
+// Header Section Styles
 .header {
   padding-top: 64px;
 }
@@ -72,3 +73,76 @@ body {
   }
 }
 
+// Hero Section Styles
+.hero {
+  padding-top: 96px;
+}
+
+.hero__container {
+  display: flex;
+  justify-content: space-between;
+  .text {
+    padding-top: 100px;
+    .subtitle {
+      margin: 0;
+      padding-bottom: 15px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 20px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+
+      color: #929A9F;
+    }
+    .title {
+      width: 470px;
+      height: 90px;
+      margin: 0;
+      padding-bottom: 15px;
+
+      font-weight: bold;
+      font-size: 32px;
+      line-height: 45px;
+
+      color: #263640;
+    }
+    .desc {
+      width: 427px;
+      height: 84px;
+      margin: 0;
+      padding-bottom: 38px;
+
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 28px;
+
+      color: #929A9F;
+    }
+    .button {
+      width: 209px;
+      height: 40px;
+      margin: 0;
+
+      gap: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 40px;
+      text-decoration: none;
+
+      color: #FFFFFF;
+      background: #FF9900;
+    }
+  }
+  .image {
+    filter: drop-shadow(-50px 100px 0px #F7F8FA);
+    img {
+      width: 593px;
+      height: 750px;
+      filter: drop-shadow(0px 10px 50px rgba(0, 0, 0, 0.2));
+    }
+  }
+}
