--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -81,6 +81,7 @@ body {
 .hero__container {
   display: flex;
   justify-content: space-between;
+  position: relative;
   .text {
     padding-top: 100px;
     .subtitle {
@@ -139,10 +140,94 @@ body {
   }
   .image {
     filter: drop-shadow(-50px 100px 0px #F7F8FA);
+    position: absolute;
+    right: 0;
     img {
       width: 593px;
       height: 750px;
       filter: drop-shadow(0px 10px 50px rgba(0, 0, 0, 0.2));
+    }
+  }
+}
+
+// Service Section Styles
+.service {
+  margin-top: 170px;
+  padding-top: 178px;
+  padding-bottom: 168px;
+  background: #F5F8FA;
+}
+
+.service__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 44px;
+
+  color: #263640;
+}
+
+.service__desc {
+  width: 489px;
+  height: 112px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #929A9F;
+}
+
+.service__container {
+  padding-top: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.service__item {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  preview {
+    width: 312px;
+    height: 333px;
+  }
+  h3 {
+    width: 222px;
+    height: 60px;
+    margin: 0;
+    padding-top: 24px;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+
+    color: #263640;
+  }
+  p {
+    width: 312px;
+    height: 112px;
+    margin: 0;
+    padding-top: 24px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+
+    color: #929A9F;
+  }
+  a {
+    padding-top: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-decoration: none;
+
+    color: #FF9900;
+    img {
+      padding-left: 8px;
     }
   }
 }
