--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -317,3 +317,115 @@ body {
     filter: drop-shadow(0px 10px 50px rgba(0, 0, 0, 0.2));
   }
 }
+
+// FAQ Section Styles
+.faq {
+  padding-bottom: 200px;
+}
+
+.faq__header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  .text {
+    h3 {
+      margin: 0;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 45px;
+
+      color: #263640;
+    }
+    p {
+      margin: 0;
+      padding-top: 16px;
+      width: 488px;
+      height: 84px;
+
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 28px;
+
+      color: #929A9F;
+    }
+  }
+  .button {
+    width: 153px;
+    height: 40px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 40px;
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: #FFFFFF;
+    background: #FF9900;
+    img {
+      padding-left: 16px;
+    }
+  }
+}
+
+.blog-title {
+  margin: 0;
+  padding-top: 80px;
+  padding-bottom: 32px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+
+  color: #929A9F;
+}
+
+.blog-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.blog-item {
+  h4 {
+    width: 361px;
+    height: 60px;
+    margin: 0;
+    padding-bottom: 20px;
+
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+
+    color: #263640;
+  }
+  p {
+    width: 361px;
+    height: 84px;
+    margin: 0;
+    padding-bottom: 20px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+
+    color: #929A9F;
+  }
+  a {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+
+    color: #FF9900;
+    img {
+      padding-left: 8px;
+    }
+  }
+}
