--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -2,7 +2,7 @@
 
 // Main Styles
 body {
-  font-family: "DIN Pro";
+  font-family: "DIN Pro", sans-serif;
 }
 
 .wrapper {
@@ -190,7 +190,7 @@ body {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  preview {
+  .preview {
     width: 312px;
     height: 333px;
   }
@@ -247,7 +247,7 @@ body {
   height: 584px;
 
   background: #263640;
-  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.2), -50px 100px 0px #F5F8FA;
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.2), -50px 100px 0px #F5F8FA;
   .container {
     width: 494px;
     height: 412px;
@@ -426,6 +426,82 @@ body {
     color: #FF9900;
     img {
       padding-left: 8px;
+    }
+  }
+}
+
+// Career section styles
+.career {
+  width: 100%;
+  height: 477px;
+  background: #F5F8FA;
+}
+
+.career__container {
+  max-width: 1216px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.career__image {
+  position: absolute;
+  right: 0;
+  top: -116px;
+  filter: drop-shadow(0px 10px 50px rgba(0, 0, 0, 0.2));
+}
+
+.career__text {
+  padding-top: 101px;
+  .subtitle {
+    margin: 0;
+    padding-bottom: 16px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    color: #929A9F;
+  }
+  .title {
+    margin: 0;
+    padding-bottom: 24px;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 44px;
+
+    color: #263640;
+  }
+  .desc {
+    width: 327px;
+    height: 84px;
+    margin: 0;
+    padding-bottom: 32px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+
+    color: #929A9F;
+  }
+  .button {
+    width: 135px;
+    height: 40px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 40px;
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: #FFFFFF;
+    background: #FF9900;
+    img {
+      padding-left: 16px;
     }
   }
 }
