Made "Footer" section.

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -505,3 +505,83 @@ body {
     }
   }
 }
+
+// Footer Section Styles
+.footer {
+  width: 100%;
+  height: 304px;
+  background: #263640;
+}
+
+.footer__container {
+  padding-top: 64px;
+  padding-bottom: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__text {
+  max-width: 410px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__text_submitted {
+  display: flex;
+  flex-direction: column;
+  h4 {
+    margin: 0;
+    padding-bottom: 8px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+  }
+  a {
+    margin: 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    text-decoration: none;
+
+    color: #FFFFFF;
+  }
+}
+
+.footer__line {
+  width: 100%;
+  height: 1px;
+  margin-bottom: 24px;
+  display: block;
+  opacity: 0.2;
+  background: #FFFFFF;
+}
+
+.footer__links {
+  width: 173px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  opacity: 0.5;
+  a {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration: none;
+
+    color: #FFFFFF;
+  }
+  span {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+
+    color: #FFFFFF;
+  }
+}
